feat: implement ProductoController and IProductoRepository for product catalog management